--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit>=1.30
-pandas>=2.0
-plotly>=5.0
-python-json-logger
+streamlit>=1.30,<1.33
+pandas>=1.5,<2.2
+plotly>=5.0,<6.0
+python-json-logger>=2.0,<3.0
+openpyxl>=3.0,<4.0  # Required for Excel export
