--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.30,<1.33
-pandas>=1.5,<2.2
-plotly>=5.0,<6.0
-python-json-logger>=2.0,<3.0
-openpyxl>=3.0,<4.0  # Required for Excel export
+streamlit==1.32.2
+pandas==2.0.3
+plotly==5.18.0
+python-json-logger==2.0.7
+openpyxl==3.1.2
